# nstd

./: .gitignore  DEVLOG.md  LICENSE  LICENSE-docs  README.md  SPEC_Version4.md  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: test.yml
nstd/: __init__.py  cli.py  config.py  conflicts.py  daemon.py  db.py  setup.py
nstd/calendar/: gcal.py  gcal_write.py  scheduler.py
nstd/sync/: asana.py  github.py  jira.py
nstd/tui/: app.py
nstd/writeback/: asana.py  jira.py
tests/: conftest.py
tests/integration/: README.md
tests/unit/: test_cli.py  test_config.py  test_conflicts.py  test_daemon.py  test_db.py  test_setup.py  test_tui.py
tests/unit/calendar/: test_gcal.py  test_gcal_write.py  test_scheduler.py
tests/unit/sync/: test_asana.py  test_github.py  test_jira.py
tests/unit/writeback/: test_asana_writeback.py  test_jira_writeback.py
